[tool.poetry]
name = "koboanki"
version = "2.0.1"
description = "An anki addon to import saved words from kobo ereaders."
authors = ["Awes Mubarak <contact@awesmubarak.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/awesmubarak/koboanki"
homepage  = "https://github.com/awesmubarak/koboanki"

[tool.poetry.dependencies]
python = "^3.9"
anki = "^2.1.44"
aqt = "^2.1.44"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyautogui = "^0.9.53"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
