[project]
name = "koboanki"
version = "3.0.0a0"
description = "Anki add-on rewrite: import saved words from Kobo e-readers"
readme = "README.md"
authors = [
    { name = "Awes Mubarak", email = "contact@awesmubarak.com" }
]
requires-python = ">=3.10"
# Anki wheels are only available for CPython 3.9-3.10 currently; adjust if needed.
dependencies = [
    "anki>=23.10.1", # runtime when loaded inside Anki
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "ruff>=0.4.4",
    "types-requests",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"] 